--- a/android/assets/jsons/Translations/Policies.json
+++ b/android/assets/jsons/Translations/Policies.json
@@ -861,7 +861,7 @@
 		Russian:"-25% цены покупок в городах"
 		Romanian:"-25% la cumpărarea obiectelor în orașe"
 		Spanish:"-25% a la compra de ítems en ciudades"
-		Simplified_Chinese:"购买城市项目时的金钱花费-25%"
+		Simplified_Chinese:"所有城市购买项目所需的金钱花费-25%"
 		Portuguese:"-25% a compra de itens em cidades"
 		German:"-25% Gold Kosten beim Kauf von Objekten in Städten"
 		French:"-25% de coût en or d'achat de batiments/unités dans les villes"
