--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -843,6 +843,10 @@
 		Ukrainian:"Гучність звуків"
 }
 
+	"Music volume":{
+		Simplified_Chinese:"音乐音量"
+}
+
 	"Show":{
 		Italian:"Mostra"
 		Russian:"Показать"
