Distinguished notifications of "trade item TO nation has ended" from "trade item FROM nation has ended"

--- a/android/assets/jsons/Translations/Notifications.json
+++ b/android/assets/jsons/Translations/Notifications.json
@@ -621,6 +621,10 @@
 		Russian:"Предложение [tradeOffer] из [otherCivName] завершилось",
 		Czech:"[tradeOffer] s civilizací [otherCivName] je u konce."
 	}
+	
+	"[tradeOffer] to [otherCivName] has ended":{
+	}
+
 
 
 	"One of our trades with [nation] has ended": {
